<resources>
    <string name="app_name">Calculator</string>
    <string name="clean_btn">AC</string>
    <string name="plus_mines">+/-</string>
    <string name="division_btn">÷</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="multiplication_btn">x</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="minus_btn">-</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="plus_btn">+</string>
    <string name="number_0">0</string>
    <string name="point_btn">.</string>
    <string name="equals">=</string>
    <string name="procent">%</string>
</resources>