<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">


    <FrameLayout

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView

            android:layout_marginRight="42dp"
            android:layout_gravity="bottom|end"
            android:textColor="@color/white"
            android:textSize="70sp"
            android:id="@+id/view"
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/container"
        android:orientation="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <LinearLayout

        android:orientation="horizontal"
        android:gravity="center"
        android:paddingVertical="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_clean"
            android:layout_marginHorizontal="10dp"
            android:onClick="onOperationClick"
            android:text="@string/clean_btn"
            style="@style/Grey_btn"
           />

        <com.google.android.material.button.MaterialButton
            android:onClick="onOperationClick"
            android:id="@+id/plus_mines"
            android:layout_marginHorizontal="10dp"
            android:text="@string/plus_mines"
            style="@style/Grey_btn"
            />

        <com.google.android.material.button.MaterialButton
            android:onClick="onOperationClick"
            android:layout_marginHorizontal="10dp"
            android:id="@+id/procent_btn"
            android:text="@string/procent"
            style="@style/Grey_btn"
            />

        <com.google.android.material.button.MaterialButton
            android:onClick="onOperationClick"
            android:id="@+id/divishion_btn"
            android:text="@string/division_btn"
            style="@style/Orange_btn"
            />


    </LinearLayout>

        <LinearLayout
            style="@style/Dark_btn"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingVertical="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:onClick="onNumberClick"
                android:id="@+id/num7"
                android:layout_marginHorizontal="10dp"
                android:text="@string/number_7"
                style="@style/Dark_btn"
                />

            <com.google.android.material.button.MaterialButton
                android:layout_marginHorizontal="10dp"
                android:onClick="onNumberClick"
                android:id="@+id/num8"
                android:text="@string/number_8"
                style="@style/Dark_btn"
                />

            <com.google.android.material.button.MaterialButton
                android:layout_marginHorizontal="10dp"
                android:id="@+id/num9"
                android:onClick="onNumberClick"
                android:text="@string/number_9"
                style="@style/Dark_btn"
                />

            <com.google.android.material.button.MaterialButton
                android:onClick="onOperationClick"
                android:id="@+id/multiplication_btn"
                android:text="@string/multiplication_btn"
                style="@style/Orange_btn"
                />


        </LinearLayout>

        <LinearLayout

            android:orientation="horizontal"
            android:gravity="center"
            android:paddingVertical="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:layout_marginHorizontal="10dp"
                android:onClick="onNumberClick"
                android:id="@+id/num4"
                android:text="@string/number_4"
                style="@style/Dark_btn"
                />

            <com.google.android.material.button.MaterialButton
                android:onClick="onNumberClick"
                android:layout_marginHorizontal="10dp"
                android:id="@+id/num5"
                android:text="@string/number_5"
                style="@style/Dark_btn"
                />

            <com.google.android.material.button.MaterialButton
                android:onClick="onNumberClick"
                android:layout_marginHorizontal="10dp"
                android:id="@+id/num6"
                android:text="@string/number_6"
                style="@style/Dark_btn"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/minius_btn"
                android:onClick="onOperationClick"
                android:text="@string/minus_btn"
                style="@style/Orange_btn"
                />


        </LinearLayout>

        <LinearLayout

            android:orientation="horizontal"
            android:gravity="center"
            android:paddingVertical="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton

                android:layout_marginHorizontal="10dp"
                android:onClick="onNumberClick"
                android:id="@+id/num1"
                android:text="@string/number_1"
                style="@style/Dark_btn"
                />

            <com.google.android.material.button.MaterialButton
                android:layout_marginHorizontal="10dp"
                android:onClick="onNumberClick"
                android:id="@+id/num2"
                android:text="@string/number_2"
                style="@style/Dark_btn"
                />

            <com.google.android.material.button.MaterialButton
                android:layout_marginHorizontal="10dp"
                android:text="@string/number_3"
                android:onClick="onNumberClick"

                android:id="@+id/num3"
                style="@style/Dark_btn"
                />

            <com.google.android.material.button.MaterialButton
                android:text="@string/plus_btn"
                android:id="@+id/plus_btn"
                android:onClick="onOperationClick"
                style="@style/Orange_btn"
                />


        </LinearLayout>

        <LinearLayout

            android:orientation="horizontal"
            android:gravity="center"
            android:paddingVertical="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/num0"
                android:paddingRight="100dp"
                android:layout_marginHorizontal="10dp"
                android:layout_width="180dp"
                android:onClick="onNumberClick"
                android:text="@string/number_0"
                style="@style/Dark_btn"
                />



            <com.google.android.material.button.MaterialButton
                android:layout_marginHorizontal="10dp"
                android:onClick="onOperationClick"
                android:text="@string/point_btn"
                android:id="@+id/dot_btn"
                style="@style/Dark_btn"
                />

            <com.google.android.material.button.MaterialButton
                android:text="@string/equals"
                android:id="@+id/equal_btn"
                android:onClick="onOperationClick"
                style="@style/Orange_btn"
                />


        </LinearLayout>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>